add ADS1X15 library

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,26 +12,19 @@
 platform = https://github.com/tsandmann/platform-teensy.git
 board = teensy41
 framework = arduino
-lib_deps =
-    https://github.com/tsandmann/freertos-teensy.git
-	
-    https://github.com/PaulStoffregen/Wire.git
-    https://github.com/PaulStoffregen/SPI.git
-    https://github.com/PaulStoffregen/SD.git
-    https://github.com/PaulStoffregen/SdFat.git
-
+lib_deps = 
+	https://github.com/tsandmann/freertos-teensy.git
+	https://github.com/PaulStoffregen/Wire.git
+	https://github.com/PaulStoffregen/SPI.git
+	https://github.com/PaulStoffregen/SD.git
+	https://github.com/PaulStoffregen/SdFat.git
 	adafruit/Adafruit Unified Sensor@^1.1.6
 	adafruit/Adafruit BusIO@^1.14.1
-
-    https://github.com/adafruit/Adafruit_LSM6DS
-
-    https://github.com/sparkfun/SparkFun_u-blox_GNSS_Arduino_Library.git
-
-    https://github.com/thijse/Arduino-Log.git
-
-    https://github.com/tomstix/QNEthernet.git
-
-
+	https://github.com/adafruit/Adafruit_LSM6DS
+	https://github.com/sparkfun/SparkFun_u-blox_GNSS_Arduino_Library.git
+	https://github.com/thijse/Arduino-Log.git
+	https://github.com/tomstix/QNEthernet.git
+	adafruit/Adafruit ADS1X15@^2.4.0
 build_flags = -Wformat=1 -DUSB_SERIAL -DTEENSY_OPT_FASTER -Wno-unused-parameter -Wno-volatile -Wno-psabi
 upload_flags = -v
 upload_protocol = teensy-cli
