ublox gnss working

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,6 +25,6 @@ lib_deps =
 	https://github.com/thijse/Arduino-Log.git
 	https://github.com/tomstix/QNEthernet.git
 	adafruit/Adafruit ADS1X15@^2.4.0
-build_flags = -Wformat=1 -DUSB_SERIAL -DTEENSY_OPT_FASTER -Wno-unused-parameter -Wno-volatile -Wno-psabi
+build_flags = -Wformat=1 -DUSB_SERIAL -DTEENSY_OPT_FASTER -Wno-unused-parameter -Wno-volatile -Wno-psabi -fno-exceptions
 upload_flags = -v
 upload_protocol = teensy-cli
