--- a/platformio.ini
+++ b/platformio.ini
@@ -21,10 +21,12 @@ lib_deps =
 	adafruit/Adafruit Unified Sensor@^1.1.6
 	adafruit/Adafruit BusIO@^1.14.1
 	https://github.com/adafruit/Adafruit_LSM6DS
+	https://github.com/adafruit/Adafruit_LIS3MDL
 	https://github.com/sparkfun/SparkFun_u-blox_GNSS_Arduino_Library.git
 	https://github.com/thijse/Arduino-Log.git
 	https://github.com/tomstix/QNEthernet.git
 	adafruit/Adafruit ADS1X15@^2.4.0
+	adafruit/Adafruit AHRS@^2.3.3
 build_flags = -Wformat=1 -DUSB_SERIAL -DTEENSY_OPT_FASTER -Wno-unused-parameter -Wno-volatile -Wno-psabi -fno-exceptions
 upload_flags = -v
 upload_protocol = teensy-cli
