--- a/platformio.ini
+++ b/platformio.ini
@@ -20,11 +20,13 @@ lib_deps =
 	https://github.com/PaulStoffregen/SdFat.git
 	adafruit/Adafruit Unified Sensor@^1.1.6
 	adafruit/Adafruit BusIO@^1.14.1
-	https://github.com/sparkfun/SparkFun_u-blox_GNSS_Arduino_Library.git
+	sparkfun/SparkFun u-blox GNSS Arduino Library@^2.2.20
 	https://github.com/thijse/Arduino-Log.git
-	https://github.com/tomstix/QNEthernet.git
+	ssilverman/QNEthernet@^0.17.0
 	adafruit/Adafruit ADS1X15@^2.4.0
 	adafruit/Adafruit AHRS@^2.3.3
-build_flags = -Wformat=1 -DUSB_SERIAL -DTEENSY_OPT_FASTER -Wno-unused-parameter -Wno-volatile -Wno-psabi -fno-exceptions
+build_flags = -Wformat=1 -DUSB_SERIAL -DTEENSY_OPT_FASTER -Wno-psabi
+build_src_flags = -Wall -Wconversion
+build_unflags = --specs=nano.specs
 upload_flags = -v
 upload_protocol = teensy-cli
