add -Wpedantic. FIx some warnings

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,7 +26,7 @@ lib_deps =
 	adafruit/Adafruit ADS1X15@^2.4.0
 	adafruit/Adafruit AHRS@^2.3.3
 build_flags = -Wformat=1 -DUSB_SERIAL -DTEENSY_OPT_FASTER -Wno-psabi
-build_src_flags = -Wall -Wconversion
+build_src_flags = -Wall -Wpedantic -Wconversion
 build_unflags = --specs=nano.specs
 upload_flags = -v
 upload_protocol = teensy-cli
